fix : Quick view, revocada clave anterior.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
     </div>
 
     <div class="container">
+        <div id="important">
+            <h2 style="color:red; font-family: 'Chakra Petch', sans-serif; margin-bottom: 20px; text-align: center;">Quick View</h2>
+        </div>
         <pre id="results">
 
         </pre>
